hphp/hack/test/typecheck/instanceof/instanceof_self_outside.php.exp
File "instanceof_self_outside.php", line 4, characters 13-16:
Unbound name: self (an object type) (Naming[2049])
