hphp/hack/test/typecheck/instanceof/instanceof_self_outside.php
<?hh // strict

function f(mixed $x): void {
  if ($x instanceof self) {
    echo 'huh?';
  }
}
